--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,46 @@ data/
 logs/
 *.pt
 *.npy
+# Git and version control
+.git
+.gitignore
+
+# Python cache and virtual environments
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+
+# Large data files (exclude from container)
+*.pt
+*.npy
+data/
+logs/
+
+# Development files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Documentation
+*.md
+docs/
+
+# Docker files (don't include in other containers)
+docker/
+Dockerfile*
+docker-compose*.yml
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.log
