--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,17 @@ numpy
 torch
 tiktoken
 transformers
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+python-multipart==0.0.6
+python-json-logger==2.0.7
+pytest==7.4.3
+httpx==0.25.2
+structlog==23.2.0
+pytest==7.4.3
+httpx==0.25.2  
+pytest-cov==4.1.0 
+uvicorn[standard]==0.24.0
+gunicorn==21.2.0
+python-multipart==0.0.6
